sumo/tests/traci/_deprecated/PositionConversion/InvalidPosOnRoad/testclient_out.traci
TraCITestClient output file. Date: Fri Apr 01 06:08:29 2011


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <PositionConversion>:
 DestPosition-RoadMap: roadId=e_m0 pos=-1.00 laneId=0 posId=3
.. Answered with error to command (113), [description: Position on lane invalid]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
